# frost-client

./: .bumpversion.cfg  .editorconfig  .flake8  .gitignore  .travis.yml  CHANGELOG.md  LICENSE  Makefile  Pipfile  README.md  model.py  pyproject.toml  setup.py
data/: frost-openapi.json  frost-reports-available.json
docs/: conf.py  index.rst  requirements.txt
examples/: basic-example.py  report-windrose.py
frost/: __init__.py  client.py
frost/api/: __init__.py  general.py  idf.py  idf_available.py  lightning.py  models.py  observations.py  oldmodels.py  report_dut.py  report_humidity_constants.py  report_idf.py  report_normals.py  report_station_records.py  report_temperature_constants.py  report_windrose.py  reports.py  reports_available.py
frost/models/: __init__.py  api_base.py  api_response.py  available_time_series_response.py  frequencies_response.py  frequencies_sources_response.py  idf.py  idf_available.py  lightning.py  observations.py  observations_response.py  report_dut.py  report_humidity_constants.py  report_idf.py  report_normal.py  report_normals.py  report_station_records.py  report_temperature_constants.py  report_windrose.py  reports_available.py  response.py  sources_response.py
frost/tests/: test_requests.py
frost/types/: __init__.py
frost/utils/: arrays.py  dataframes.py  validation.py
frosttypes/: base-types.py  fix-types.py
tests/: conftest.py  test_api_error.py  test_client.py  test_frost.py
tests/models/: test_available_time_series_response.py  test_frequencies_response.py  test_frequencies_sources_response.py  test_response.py  (+2 more)
(+1 files in other folders)
